# Programas_Lab

./: .gitignore  pyproject.toml  requirements.txt
ValorU/: N_Seq.py  ValorU.py  main.py  setup.py
VarCalc/: N_Seq.py  Recorrencia.py  ValorU.py  main.py  n_mud.py  setup.py  teste.py
