[tool.poetry]
name = "programas_lab"
version = "0.1.0"
description = ""
authors = ["Fábio Henrique <psifabiohenrique@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.3"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
